<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:clickable="true"
    android:layout_marginStart="@dimen/spacing_normal"
    android:layout_marginEnd="@dimen/spacing_normal"
    android:layout_marginTop="@dimen/spacing_normal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        card_view:cardElevation="1dp"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@color/grey_300"
                android:id="@+id/thumbnail"
                android:layout_width="136dp"
                android:layout_height="144dp" />

            <LinearLayout
                android:layout_toEndOf="@+id/thumbnail"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="@style/PrimaryTitle"
                    android:id="@+id/food_name"
                    android:lines="1"
                    android:ellipsize="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="@style/SecondaryText"
                    android:lines="1"
                    android:ellipsize="end"
                    android:visibility="invisible"
                    android:id="@+id/restaurant_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RatingBar
                        android:id="@+id/stars"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:theme="@style/RatingBar"
                        android:stepSize="0.1"
                        android:isIndicator="true"/>

                    <TextView
                        android:id="@+id/rate_point"
                        android:layout_marginStart="8dp"
                        android:textSize="@dimen/app_text_size_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:layout_marginStart="8dp"
                    android:id="@+id/price"
                    android:textSize="@dimen/app_text_size_small"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_marginTop="8dp"
                    android:background="@color/material_grey_300"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <LinearLayout
                    android:padding="@dimen/spacing_normal"
                    android:layout_width="fill_parent"
                    android:weightSum="8"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:id="@+id/directions"
                        android:clickable="true"
                        android:background="?selectableItemBackgroundBorderless"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_directions"
                            android:id="@+id/ic_directions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_toEndOf="@+id/ic_directions"
                            android:layout_centerVertical="true"
                            android:textStyle="bold"
                            android:layout_marginStart="8dp"
                            android:text="@string/directions"
                            android:fontFamily="@string/font_family_regular"
                            android:textSize="@dimen/text_size_xsmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/share"
                        android:clickable="true"
                        android:background="?selectableItemBackgroundBorderless"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_share"
                            android:id="@+id/ic_share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_toEndOf="@+id/ic_share"
                            android:layout_centerVertical="true"
                            android:textStyle="bold"
                            android:layout_marginStart="8dp"
                            android:text="@string/share"
                            android:fontFamily="@string/font_family_regular"
                            android:textSize="@dimen/text_size_xsmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/save"
                        android:clickable="true"
                        android:background="?selectableItemBackgroundBorderless"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/ic_love_border"
                            android:id="@+id/icon_save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_toEndOf="@+id/icon_save"
                            android:layout_centerVertical="true"
                            android:textStyle="bold"
                            android:layout_marginStart="8dp"
                            android:text="@string/save"
                            android:fontFamily="@string/font_family_regular"
                            android:textSize="@dimen/text_size_xsmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>